--- a/themes/chronicle/languages/zh-CN.yml
+++ b/themes/chronicle/languages/zh-CN.yml
@@ -3,7 +3,25 @@ archive: 归档
 tag: 标签
 category: 分类
 about: 关于
+project: 项目
+github: GitHub
 prev: 上一篇
 next: 下一篇
 featured: 精选
 chronicle: 编年史
+chronicle_desc: 记录我的技术之旅。
+newer: 更新
+older: 更早
+newer_posts: 较新的文章
+older_posts: 较早的文章
+contents: 目录
+toc_toggle: 切换目录
+toggle_navigation: 切换导航
+switch_lang: 切换语言
+min_read: 分钟阅读
+posts_suffix: 篇文章
+author_label: 作者
+link_label: 链接
+license_label: 许可
+powered_by: 由
+back_to_top: 返回顶部
