fix(i18n): adjust language toggle button styling and translation

--- a/themes/chronicle/languages/zh-CN.yml
+++ b/themes/chronicle/languages/zh-CN.yml
@@ -14,7 +14,7 @@ newer: 更新
 older: 更早
 newer_posts: 较新的文章
 older_posts: 较早的文章
-contents: 目录
+contents: 内容
 toc_toggle: 切换目录
 toggle_navigation: 切换导航
 switch_lang: 切换语言
